# mod_gearman

./: .gitignore  .travis.yml  02_full  Changes  Doxyfile  INSTALL  Makefile  Makefile.am  QUICKSTART  QUICKSTART.html  README  README.asciidoc  README.html  THANKS  TODO  autogen.sh  configure.ac  get_version  mod_gearman.spec
.github/workflows/: citest.yml  codeql.yml
common/: .gitignore  Makefile.am  base64.c  check_utils.c  crypt.c  epn_utils.c  gearman.c  gearman_utils.c  gm_alloc.c  gm_crypt.c  popenRWE.c  rijndael.c  utils.c
contrib/: Makefile.am  README  gearman_proxy.cfg  gearman_proxy.init  gearman_proxy.pl  mod_gearman_mini_epn.c  send_gearman.pl
debian/: changelog  control  copyright  help2man.include  mod-gearman-doc.docs  mod-gearman-module.README.Debian  mod-gearman-module.install  mod-gearman-module.logrotate  mod-gearman-module.postinst  mod-gearman-tools.manpages  mod-gearman-worker.README.Debian  mod-gearman-worker.examples  mod-gearman-worker.init  mod-gearman-worker.install  mod-gearman-worker.logrotate  mod-gearman-worker.manpages  mod-gearman-worker.postinst  mod-gearman-worker.preinst  mod-gearman-worker.service  mod-gearman.dsc  mod-gearman.examples  mod-gearman2-module.README.Debian  mod-gearman2-module.examples  mod-gearman2-module.install  mod-gearman2-module.logrotate  mod-gearman2-module.postinst  mod-gearman2-tools.install  mod-gearman2-tools.manpages  mod-gearman2-worker.init  mod-gearman2-worker.install  mod-gearman2-worker.logrotate  mod-gearman2-worker.manpages  mod-gearman2-worker.postinst  module.conf  rules  watch  worker.conf
docs/: QUICKSTART  QUICKSTART.html  README.html  TODO  advanced_distributed.pptx  gearman_proxy.pptx  mod_gearman_queues.pptx  nsca_replacement.pptx  sample_distributed.pptx  sample_distributed_load_balanced.pptx  sample_load_balancing.pptx
etc/: .gitignore  mod_gearman.conf.in  mod_gearman_logrotate  mod_gearman_neb.conf.in  mod_gearman_worker.conf.in  mod_gearman_worker_logrotate
extras/: .gitignore  example.conf  gearmand-init.in  initscript  shared.conf  standalone_worker.conf  worker.conf  worker_stats.init  worker_stats.pl
include/: base64.h  check_gearman.h  check_utils.h  common.h  crypt.h  epn_mod_gearman.h  epn_utils.h  gearman.h  gearman_top.h  gearman_utils.h  gm_alloc.h  gm_crypt.h  gm_log.h  mod_gearman.h  popenRWE.h  result_thread.h  rijndael.h  send_gearman.h  send_multi.h  tools_logger.h  utils.h  worker.h  worker_client.h  worker_dummy_functions.c  worker_logger.h
include/libgearman/: command.h  core.h  gearman.h  packet.h  task.h  universal.h
include/nagios/: cgiutils.h  config.h  locations.h
include/nagios3/: broker.h  common.h  macros.h  nagios.h
include/nagios4/: locations.h
include/nagios4/lib/: script
include/polarssl/: md5.h
mod_gearman/etc/: mod_gearman_logrotate  mod_gearman_neb.conf  mod_gearman_worker.conf  mod_gearman_worker.conf.in
mod_gearman/include/: epn_utils.h  gearman_top.h  gearman_utils.h  gm_alloc.h  rijndael.h
mod_gearman/support/: mod-gearman.spec
mod_gearman/t/: 03-exec_checks.c  05-neb.c  05-neb_naemon.c  05-neb_nagios3.c  fail.pl  killer  make_valgrind_suppressions.pl  noexit.pl  rc  sleep
mod_gearman/t/data/: send_gearman_results.txt
mod_gearman/tools/: gearman_top.c  send_gearman.c  send_multi.c
mod_gearman/tools/devel/: garbage.pl
mod_gearman/tools/perl/: queue_top.pl  worker.pl
nbproject/: configurations.xml  project.xml
nbproject/private/: configurations.xml  private.xml
neb_module/: Makefile.am  configure.ac  gm_log.c  logger.c  logger.h  mod_gearman.c  mod_gearman.h  result_thread.c  utils.c  utils.h  worker.c  worker.h
neb_module/includes/libgearman/: byteorder.h  client.h  common.h  configure.h  conn.h  constants.h  gearman.h  job.h  packet.h  structs.h  task.h  universal.h  visibility.h  worker.h
neb_module_naemon/: mod_gearman.c  result_thread.c
neb_module_nagios3/: mod_gearman.c  result_thread.c
neb_module_nagios4/: mod_gearman.c  result_thread.c
patches/: 0001-use_return_values_from_eventhandler_broker.patch
src/: .gitignore  Makefile.am  base64.c  common.h  configure.ac  crypt.c  crypt.h  gearman.c  gearman.h  initscript.in  logger.c  logger.h  mod_gearman.c  mod_gearman.h  result_thread.c  result_thread.h  rijndael.h  utils.c  utils.h  worker.c  worker.h  worker_client.c  worker_client.h  worker_logger.c  worker_logger.h
src/includes/libgearman/: command.h  connection.h  log.h  strerror.h  visibility.h
src/includes/nagios/: config.h  snprintf.h
support/: mod-gearman.spec  mod-gearman2.spec  mod_gearman.spec  naemon-mod-gearman.spec
t/: .gitignore  01-utils.c  02-full.c  03-exec_checks.c  04-log.c  05-neb.c  05-neb_nagios4.c  06-execvp_vs_popen.c  07-epn.c  08-roundtrip.c  09-benchmark.t  10-large-result.t  11-alloc.t  12-cppcheck.t  13-tools.t  14-symbols.t  benchmark.t  both  cppcheck.t  crit.pl  fail.pl  killer  make_valgrind_suppressions.pl  noepn.pl  ok.pl  rc  sleep  tap.c  test_all.pl  valgrind_extra_manual.cfg  valgrind_suppress.cfg
t/data/: send_multi.txt  test1.key  test2.key  test3.key
tools/: check_gearman.c  gearman_top.c  queue_top.pl  send_gearman.c  send_multi.c  tools_logger.c
tools/devel/: clean_shm.sh  garbage.pl
tools/perl/: dump_queue.pl  send_command.pl  worker.pl
worker/: .gitignore  Makefile.am  daemon-systemd.in  initscript.in  mod_gearman_p1.pl  queue_top.pl  send_gearman.c  worker.c  worker.pl  worker_client.c  worker_logger.c
